--- a/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
@@ -17,7 +17,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ListView fx:id="user_list_view" prefHeight="401.0" prefWidth="204.0" />
                 <AnchorPane fx:id="chat_message_pane" prefHeight="384.0" prefWidth="398.0" visible="false" GridPane.columnIndex="1">
                     <children>
                   <AnchorPane fx:id="user_details_pane" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -74,6 +73,13 @@
                             </font></Label>
                     </children>
                 </AnchorPane>
+            <AnchorPane fx:id="chat_user_pane" prefHeight="200.0" prefWidth="200.0">
+               <children>
+                      <ListView fx:id="user_list_view" prefHeight="401.0" prefWidth="204.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+                  <Button fx:id="new_chat_user_button" layoutX="140.0" layoutY="2.0" mnemonicParsing="false" text="+" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0" />
+                  <TextField fx:id="new_chat_user_text" layoutY="4.0" promptText="Add a new user..." AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
+               </children>
+            </AnchorPane>
             </children>
         </GridPane>
     </children>
