--- a/src/main/resources/com/epds/javafx_login/scenes/home.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/home.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
    <children>
-      <Pane layoutX="22.0" layoutY="40.0" prefHeight="103.0" prefWidth="559.0" style="-fx-background-color: #0D9276; -fx-background-radius: 10;">
+      <Pane layoutX="22.0" layoutY="40.0" prefHeight="103.0" prefWidth="559.0" style="-fx-background-color: #0D9276; -fx-background-radius: 10;" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0">
          <children>
             <ImageView fitHeight="110.0" fitWidth="156.0" layoutX="387.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
