--- a/src/main/resources/com/epds/javafx_login/list_cells/chat_message_cell.fxml
+++ b/src/main/resources/com/epds/javafx_login/list_cells/chat_message_cell.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="chat_message_pane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.ui.ChatMessageCellController">
+<AnchorPane fx:id="chat_message_pane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.ui.ChatMessageCellController">
    <children>
       <HBox fillHeight="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Region HBox.hgrow="ALWAYS" />
-            <Label fx:id="chat_message_text" alignment="TOP_LEFT" style="-fx-background-color: aqua; -fx-background-radius: 5;" text="Chat Message" wrapText="true">
+            <Label fx:id="chat_message_text" alignment="TOP_LEFT" style="-fx-background-color: #0D9276; -fx-background-radius: 5; -fx-padding: 6;" text="Chat Message" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="13.0" />
                </font>
