Fixed API client and now prints out the response after opening the Chat window.

--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -71,7 +71,7 @@
                         </Button>
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="main_container" GridPane.columnIndex="1" />
+                <AnchorPane fx:id="main_pane" GridPane.columnIndex="1" />
             </children>
         </GridPane>
     </children>
