--- a/src/main/resources/com/epds/javafx_login/scenes/home.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/home.fxml
@@ -1,36 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.SVGPath?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
-   <children>
-      <Pane layoutX="22.0" layoutY="40.0" prefHeight="103.0" prefWidth="559.0" style="-fx-background-color: #0D9276; -fx-background-radius: 10;" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0">
-         <children>
-            <ImageView fitHeight="110.0" fitWidth="156.0" layoutX="387.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/design.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="39.0" layoutY="14.0" prefHeight="34.0" prefWidth="193.0" text="Welcome to" textFill="WHITE">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="68.0" layoutY="47.0" prefHeight="34.0" prefWidth="91.0" text="IIMS !" textFill="WHITE">
-               <font>
-                  <Font name="Baskerville Bold" size="30.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-      <Pane layoutX="26.0" layoutY="167.0" prefHeight="174.0" prefWidth="371.0" style="-fx-background-color: white; -fx-background-radius: 10;">
-         <children>
-            <Pane layoutX="392.0" layoutY="-2.0" prefHeight="174.0" prefWidth="162.0" style="-fx-background-color: white; -fx-background-radius: 10;" />
-         </children>
-      </Pane>
-      <Pane layoutX="27.0" layoutY="366.0" prefHeight="110.0" prefWidth="553.0" style="-fx-background-color: white; -fx-background-radius: 10;" />
-   </children>
+<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;" stylesheets="@stylesheet.css"
+            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
+    <children>
+        <Pane layoutX="24.0" layoutY="55.0" prefHeight="103.0" prefWidth="553.0"
+              style="-fx-background-color: #0D9276; -fx-background-radius: 10;" AnchorPane.leftAnchor="24.0"
+              AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="55.0">
+            <children>
+                <ImageView fitHeight="127.0" fitWidth="172.0" layoutX="371.0" layoutY="-17.0" pickOnBounds="true"
+                           preserveRatio="true">
+                    <image>
+                        <Image url="@../images/props.png"/>
+                    </image>
+                </ImageView>
+                <Label layoutX="39.0" layoutY="14.0" prefHeight="34.0" prefWidth="193.0" text="Welcome to"
+                       textFill="WHITE">
+                    <font>
+                        <Font size="28.0"/>
+                    </font>
+                </Label>
+                <Label layoutX="68.0" layoutY="47.0" prefHeight="34.0" prefWidth="91.0" text="IIMS !" textFill="WHITE">
+                    <font>
+                        <Font name="Baskerville Bold" size="30.0"/>
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Pane layoutX="26.0" layoutY="177.0" prefHeight="174.0" prefWidth="371.0"
+              style="-fx-background-color: white; -fx-background-radius: 10;">
+            <children>
+                <Pane layoutX="392.0" layoutY="-2.0" prefHeight="174.0" prefWidth="162.0"
+                      style="-fx-background-color: white; -fx-background-radius: 10;"/>
+            </children>
+        </Pane>
+        <Pane layoutX="27.0" layoutY="366.0" prefHeight="110.0" prefWidth="553.0"
+              style="-fx-background-color: white; -fx-background-radius: 10;"/>
+        <TextField id="search_field" layoutX="24.0" layoutY="14.0" prefHeight="26.0" prefWidth="335.0"
+                   promptText="Search..."/>
+        <Button id="search_btn" layoutX="358.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0"
+                prefWidth="41.0" style="-fx-background-color: #0D9276;">
+            <graphic>
+                <StackPane id="" prefHeight="5.0" prefWidth="0.0">
+                    <SVGPath id="svgIcon_search"
+                             content="M10.68 11.74a6 6 0 0 1-7.922-8.982a6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275a.75.75 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7"/>
+                </StackPane>
+            </graphic>
+        </Button>
+        <ChoiceBox id="choicebox" layoutX="540.0" layoutY="14.0" prefHeight="26.0" prefWidth="38.0"/>
+    </children>
 </AnchorPane>
