--- a/src/main/resources/com/epds/javafx_login/scenes/page2.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/page2.fxml
@@ -4,11 +4,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="123.0" prefWidth="183.0" style="-fx-background-color: aqua;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.Page2Controller">
+<AnchorPane prefHeight="123.0" prefWidth="183.0" style="-fx-background-color: aqua;" xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.epds.javafx_login.utilities.controllers.Page2Controller">
     <children>
-        <Text layoutX="49.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAGE 2" AnchorPane.bottomAnchor="45.748046875" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="48.37613932291666" AnchorPane.topAnchor="44.0224609375">
+        <Text layoutX="49.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAGE 2"
+              AnchorPane.bottomAnchor="45.748046875" AnchorPane.leftAnchor="49.0"
+              AnchorPane.rightAnchor="48.37613932291666" AnchorPane.topAnchor="44.0224609375">
             <font>
-                <Font name="System Bold" size="25.0" />
+                <Font name="System Bold" size="25.0"/>
             </font>
         </Text>
     </children>
