--- a/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.SVGPath?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.ChatController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.ChatController">
     <children>
         <GridPane alignment="CENTER" layoutY="-1.0" prefHeight="401.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -25,14 +17,13 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ListView fx:id="user_list_view" prefHeight="401.0" prefWidth="204.0" style="-fx-background-color: #fafafa;" />
                 <AnchorPane fx:id="chat_message_pane" prefHeight="384.0" prefWidth="398.0" style="-fx-background-color: #f2f2f2;" visible="false" GridPane.columnIndex="1">
                     <children>
                         <AnchorPane fx:id="user_details_pane" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <children>
                                 <ImageView fx:id="profile_user_image" fitHeight="34.0" fitWidth="36.0" layoutX="8.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="6.0">
                                     <image>
-                                        <Image url="@../images/profile.png" />
+                                        <Image url="@../images/IIMS.png" />
                                     </image>
                                 </ImageView>
                                 <Label fx:id="profile_user_name" layoutX="48.0" layoutY="5.0" prefHeight="23.0" prefWidth="281.0" text="Users Name" AnchorPane.leftAnchor="48.0" AnchorPane.topAnchor="5.0">
