--- a/src/main/resources/com/epds/javafx_login/scenes/page3.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/page3.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="123.0" prefWidth="183.0" style="-fx-background-color: tomato;"
-            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #F2F2F2;;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Text layoutX="49.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAGE 3"
-              AnchorPane.bottomAnchor="45.748046875" AnchorPane.leftAnchor="49.0"
-              AnchorPane.rightAnchor="48.37613932291666" AnchorPane.topAnchor="44.0224609375">
+        <Text layoutX="29.0" layoutY="38.169921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Page 3" wrappingWidth="135.5234375" AnchorPane.bottomAnchor="457.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="466.0" AnchorPane.topAnchor="14.0">
             <font>
-                <Font name="System Bold" size="25.0"/>
+                <Font name="System Bold" size="25.0" />
             </font>
         </Text>
+      <Pane layoutX="29.0" layoutY="50.0" prefHeight="425.0" prefWidth="569.0" style="-fx-background-color: white; -fx-background-radius: 8;" />
     </children>
 </AnchorPane>
