--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,19 +27,19 @@
             <children>
                 <AnchorPane minWidth="186.0" prefHeight="500.0" prefWidth="186.0" style="-fx-background-color: white;" styleClass="main_pane" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                     <children>
-                        <Text fx:id="username" layoutX="1.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER" wrappingWidth="199.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="136.53125">
-                            <font>
-                                <Font name="System Bold" size="16.0" />
-                            </font>
-                        </Text>
-                        <ImageView fitHeight="152.0" fitWidth="131.0" layoutX="35.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="24.0">
+                        <ImageView fitHeight="72.0" fitWidth="110.0" layoutX="47.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="47.0" AnchorPane.topAnchor="17.0">
                             <image>
-                                <Image url="@../images/IIMS.png" />
+                                <Image url="@../images/iims_logo.png" />
                             </image>
                         </ImageView>
-                        <Button fx:id="home_btn" layoutX="21.0" layoutY="200.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="177.0" styleClass="main_side_button" text="Home" textFill="#44977d" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                        <Text fx:id="username" layoutX="1.0" layoutY="160.96875" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER" wrappingWidth="199.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="145.5">
                             <font>
-                                <Font name="System Bold" size="16.0" />
+                                <Font name="Serif Bold" size="16.0" />
+                            </font>
+                        </Text>
+                        <Button fx:id="home_btn" layoutX="1.0" layoutY="184.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="177.0" styleClass="main_side_button" text="Home" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
                             </font>
                             <graphic>
                                 <StackPane id="svgContainer">
@@ -46,9 +47,9 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                        <Button fx:id="chat_btn" layoutX="18.0" layoutY="235.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="163.0" styleClass="main_side_button" text="Chat" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                        <Button fx:id="chat_btn" layoutX="1.0" layoutY="219.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="163.0" styleClass="main_side_button" text="Chat" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
                             <font>
-                                <Font name="System Bold" size="16.0" />
+                                <Font name="System Bold" size="14.0" />
                             </font>
                             <graphic>
                                 <StackPane id="svgContainer">
@@ -56,9 +57,9 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                        <Button fx:id="page_3" layoutX="20.0" layoutY="271.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="163.0" styleClass="main_side_button" text="Page 3" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                        <Button fx:id="page_3" layoutX="1.0" layoutY="255.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="163.0" styleClass="main_side_button" text="Page 3" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
                             <font>
-                                <Font name="System Bold" size="16.0" />
+                                <Font name="System Bold" size="14.0" />
                             </font>
                             <graphic>
                                 <StackPane id="svgContainer">
@@ -66,7 +67,7 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                        <Button fx:id="logout_btn" layoutY="456.0" mnemonicParsing="false" onAction="#navigateToLoginRegister" prefHeight="30.0" prefWidth="199.0" style="-fx-background-color: transparent;" text="Logout" textFill="#0d9276" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                        <Button fx:id="logout_btn" layoutY="456.0" mnemonicParsing="false" onAction="#navigateToLoginRegister" prefHeight="30.0" prefWidth="201.0" style="-fx-background-color: transparent;" text="Logout" textFill="#0d9276" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                             <font>
                                 <Font size="15.0" />
                             </font>
@@ -76,7 +77,29 @@
                                 </StackPane>
                             </graphic>
                         </Button>
-                  <Line endX="100.0" layoutX="100.0" layoutY="188.0" startX="-100.0" stroke="#eeeeee" />
+                        <Line endX="100.0" layoutX="100.0" layoutY="174.0" startX="-100.0" stroke="#eeeeee" />
+                        <Label layoutX="24.0" layoutY="92.0" prefHeight="19.0" prefWidth="154.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="INTEGRATED INFORMATION" textAlignment="CENTER" wrapText="true">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+                        <Button fx:id="page_31" layoutX="1.0" layoutY="292.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="199.0" styleClass="main_side_button" text="Page 3">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                            <graphic>
+                                <StackPane id="svgContainer">
+                                    <children>
+                                        <SVGPath id="svgIcon" content="m7.625 6.4l2.8-3.625q.3-.4.713-.587T12 2t.863.188t.712.587l2.8 3.625l4.25 1.425q.65.2 1.025.738t.375 1.187q0 .3-.088.6t-.287.575l-2.75 3.9l.1 4.1q.025.875-.575 1.475t-1.4.6q-.05 0-.55-.075L12 19.675l-4.475 1.25q-.125.05-.275.063T6.975 21q-.8 0-1.4-.6T5 18.925l.1-4.125l-2.725-3.875q-.2-.275-.288-.575T2 9.75q0-.625.363-1.162t1.012-.763z" />
+                                    </children>
+                                </StackPane>
+                            </graphic>
+                        </Button>
+                  <Label layoutX="24.0" layoutY="109.0" prefHeight="19.0" prefWidth="154.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="MANAGEMENT SYSTEM" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
                     </children>
                 </AnchorPane>
                 <AnchorPane fx:id="main_pane" visible="false" GridPane.columnIndex="1" />
