--- a/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -27,7 +26,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <GridPane fx:id="grid_pane_login">
+        <GridPane fx:id="grid_pane_login" >
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.33331298828125" minWidth="10.0" prefWidth="296.6666259765625" />
@@ -100,53 +99,67 @@
                 </VBox>
             </children>
         </GridPane>
-        <Pane fx:id="login_logo_pane" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+        <GridPane fx:id="login_logo_pane" prefHeight="200.0" prefWidth="200.0" styleClass="body" GridPane.columnIndex="1">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.33331298828125" minWidth="10.0" prefWidth="296.6666259765625" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints fillHeight="false" minHeight="35.0" prefHeight="49.0" vgrow="ALWAYS" />
+                <RowConstraints maxHeight="412.0" minHeight="10.0" prefHeight="412.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="37.0" prefHeight="37.0" vgrow="ALWAYS" />
+            </rowConstraints>
             <children>
-                <ImageView fitHeight="386.0" fitWidth="400.0" layoutX="8.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <ImageView fitHeight="378.0" fitWidth="378.0" layoutX="-42.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
                         <Image url="@../images/abstract.png" />
-                    </image>
-                    <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                    </cursor>
-                </ImageView>
-                <ImageView fitHeight="55.0" fitWidth="54.0" layoutX="105.0" layoutY="262.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/ched_logo.png" />
-                    </image>
-                </ImageView>
-                <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="174.0" layoutY="261.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/cfidp_logo.png" />
-                    </image>
-                </ImageView>
-                <ImageView fitHeight="56.0" fitWidth="62.0" layoutX="241.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/pca_logo.png" />
-                    </image>
-                </ImageView>
-                <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="94.0" layoutY="461.0" prefHeight="13.0" prefWidth="213.0" text="Copyright © 2024 Philippine Coconut Authority" textFill="#d0cece">
-                    <font>
-                        <Font size="10.0" />
-                    </font>
-                </Label>
-                <ImageView fitHeight="156.0" fitWidth="162.0" layoutX="111.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
+                     </image>
+                  </ImageView>
+                      <ImageView fitHeight="55.0" fitWidth="48.0" layoutX="59.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../images/ched_logo.png" />
+                          </image>
+                      </ImageView>
+                      <ImageView fitHeight="56.0" fitWidth="62.0" layoutX="181.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../images/pca_logo.png" />
+                          </image>
+                      </ImageView>
+                      <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="120.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../images/cfidp_logo.png" />
+                          </image>
+                      </ImageView>
+                      <Label layoutX="66.0" layoutY="211.0" prefHeight="17.0" prefWidth="162.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="MANAGEMENT SYSTEM">
+                          <font>
+                              <Font name="System Bold" size="15.0" />
+                          </font>
+                      </Label>
+                      <Label layoutX="66.0" layoutY="196.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="INTEGRATED INFORMATION">
+                          <font>
+                              <Font name="System Bold" size="13.0" />
+                          </font>
+                      </Label>
+                  <ImageView fitHeight="139.0" fitWidth="177.0" layoutX="52.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
                         <Image url="@../images/iims_logo.png" />
-                    </image>
-                </ImageView>
-            <Label layoutX="111.0" layoutY="219.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="INTEGRATED INFORMATION">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="111.0" layoutY="234.0" prefHeight="17.0" prefWidth="162.0" style="-fx-text-fill: linear-gradient(from 0% 0% to 100% 100%, #667413, #BD9439);" text="MANAGEMENT SYSTEM">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </Label>
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                      <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="13.0" prefHeight="13.0" prefWidth="213.0" text="Copyright © 2024 Philippine Coconut Authority" textFill="#d0cece">
+                          <font>
+                              <Font size="10.0" />
+                          </font>
+                      </Label>
+               </children></Pane>
             </children>
-        </Pane>
+        </GridPane>
         <GridPane fx:id="grid_pane_register" visible="false" GridPane.columnIndex="1">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
@@ -237,31 +250,49 @@
                 </VBox>
             </children>
         </GridPane>
-        <Pane fx:id="register_logo_pane" prefHeight="200.0" prefWidth="200.0" visible="false">
+        <GridPane fx:id="register_logo_pane" visible="false" prefHeight="200.0" prefWidth="200.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.66666666666663" minWidth="10.0" prefWidth="276.0" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="50.0" prefWidth="50.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints fillHeight="false" minHeight="75.0" prefHeight="75.0" vgrow="ALWAYS" />
+                <RowConstraints maxHeight="351.5" minHeight="10.0" prefHeight="348.5" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="20.0" prefHeight="67.0" vgrow="ALWAYS" />
+            </rowConstraints>
             <children>
-                <ImageView fitHeight="336.0" fitWidth="378.0" layoutX="11.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/abstract2.png" />
-                    </image>
-                </ImageView>
-                <Label alignment="CENTER" layoutX="123.0" layoutY="157.0" prefHeight="32.0" prefWidth="192.0" text="Welcome to IIMS!" textFill="#44977d">
-                    <font>
-                        <Font name="System Bold" size="22.0" />
-                    </font>
-                </Label>
-                <Label alignment="TOP_CENTER" layoutX="72.0" layoutY="202.0" prefHeight="56.0" prefWidth="277.0" text="Join our community and unlock the full potential of your experience. Sign up now to access exclusive features and stay connected." textAlignment="JUSTIFY" wrapText="true" />
-                <Label alignment="TOP_LEFT" layoutX="72.0" layoutY="271.0" prefHeight="18.0" prefWidth="277.0" text="Get started today!" wrapText="true" />
-                <Label alignment="TOP_LEFT" layoutX="94.0" layoutY="461.0" prefHeight="18.0" prefWidth="213.0" text="Copyright © 2024 Philippine Coconut Authority" textFill="#d0cece" wrapText="true">
-                    <font>
-                        <Font size="10.0" />
-                    </font>
-                </Label>
-                <ImageView fitHeight="62.0" fitWidth="68.0" layoutX="180.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/iims_logo.png" />
-                    </image>
-                </ImageView>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                      <ImageView fitHeight="336.0" fitWidth="378.0" layoutX="-51.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../images/abstract2.png" />
+                          </image>
+                      </ImageView>
+                      <ImageView fitHeight="62.0" fitWidth="68.0" layoutX="104.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../images/iims_logo.png" />
+                          </image>
+                      </ImageView>
+                      <Label alignment="TOP_CENTER" layoutX="7.0" layoutY="126.0" prefHeight="56.0" prefWidth="277.0" text="Join our community and unlock the full potential of your experience. Sign up now to access exclusive features and stay connected." textAlignment="JUSTIFY" wrapText="true" />
+                      <Label alignment="TOP_LEFT" layoutX="7.0" layoutY="190.0" prefHeight="18.0" prefWidth="277.0" text="Get started today!" wrapText="true" />
+                      <Label alignment="CENTER" layoutX="42.0" layoutY="81.0" prefHeight="32.0" prefWidth="192.0" text="Welcome to IIMS!" textFill="#44977d">
+                          <font>
+                              <Font name="System Bold" size="22.0" />
+                          </font>
+                      </Label>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                      <Label alignment="TOP_LEFT" layoutX="32.0" layoutY="36.0" prefHeight="18.0" prefWidth="213.0" text="Copyright © 2024 Philippine Coconut Authority" textFill="#d0cece" wrapText="true">
+                          <font>
+                              <Font size="10.0" />
+                          </font>
+                      </Label>
+               </children>
+            </Pane>
             </children>
-        </Pane>
+        </GridPane>
     </children>
 </GridPane>
